--- a/templates/register.html
+++ b/templates/register.html
@@ -11,6 +11,13 @@
             <label>Password</label>
             <input type="password" name="password" class="form-control" required>
         </div>
+        <div class="form-group mt-3">
+            <label for="user_type">Select User Type</label>
+            <select name="user_type" class="form-control" required>
+                <option value="user">User</option>
+                <option value="admin">Admin</option>
+            </select>
+        </div>
         <button type="submit" class="btn btn-success mt-4">Register</button>
     </form>
     <p class="mt-3">Already have an account? <a href="/login">Login here</a></p>
