Update index.html for Subheader

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
 {% block title %}Home - Parts Catalog{% endblock %}
 {% block content %}
-<h2 class="mb-4">Parts Catalog</h2>
+<h1 class="mb-4 text-center">LES Electronic Parts Catalog</h1>
+<h4 class="mb-2 text-center fst-italic">Latest MySQL Database</h4>
+
 {% if data %}
 <div class="table-responsive">
     <table class="table table-bordered table-striped">
