--- a/templates/index.html
+++ b/templates/index.html
@@ -5,18 +5,27 @@
 <h4 class="mb-2 text-center fst-italic">Latest MySQL Database</h4>
 
 {% if data %}
-<div class="table-responsive">
+<div class="table-responsive" style="max-height: 600px; overflow-y: auto;">
     <table class="table table-bordered table-striped">
-        <thead class="table-dark">
-            <tr>{% for header in data[0].keys() %}<th>{{ header }}</th>{% endfor %}</tr>
+        <thead class="table-dark sticky-top">
+            <tr>
+                {% for header in data[0].keys() %}
+                    <th>{{ header }}</th>
+                {% endfor %}
+            </tr>
         </thead>
         <tbody>
             {% for row in data %}
-            <tr>{% for value in row.values() %}<td>{{ value }}</td>{% endfor %}</tr>
+                <tr>
+                    {% for value in row.values() %}
+                        <td>{{ value }}</td>
+                    {% endfor %}
+                </tr>
             {% endfor %}
         </tbody>
     </table>
 </div>
+
 <nav aria-label="Page navigation">
   <ul class="pagination justify-content-center">
     {% if page > 1 %}
